# semitone

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  README  build.gradle  shell.nix
src/main/: AndroidManifest.xml
src/main/assets/: about-es.html  about.html
src/main/cpp/: PianoEngine.cpp  PianoEngine.h  Sound.cpp  Sound.h  Tone.cpp  Tone.h  mn_tck_semitone_PianoEngine.h  semitone-native.cpp
src/main/java/mn.tck.semitone/: AboutActivity.java  CentErrorView.java  DSP.java  MainActivity.java  MetronomeFragment.java  NumBox.java  PianoEngine.java  PianoFragment.java  PianoView.java  RecordEngine.java  SemitoneFragment.java  SettingsActivity.java  SettingsFragment.java  TunerFragment.java  Util.java
src/main/res/drawable/: roundedbox.xml
src/main/res/layout/: activity_about.xml  activity_main.xml  activity_settings.xml  metronome.xml  numbox.xml  piano.xml
src/main/res/layout-land/: metronome.xml  piano.xml
src/main/res/menu/: main_menu.xml
src/main/res/values/: attrs.xml  colors.xml  dimens.xml  scales.xml  strings.xml  styles.xml
src/main/res/values-es/: strings.xml
src/main/res/xml/: settings.xml
tools/: build_ffmpeg.sh  copy_ffmpeg.sh
