cmake_minimum_required(VERSION 3.4.1)
add_library (semitone-native SHARED src/main/cpp/semitone-native.cpp src/main/cpp/PianoEngine.cpp src/main/cpp/Tone.cpp src/main/cpp/Sound.cpp)
find_library (android-lib android)
target_link_libraries (semitone-native oboe ${android-lib})
add_subdirectory (./lib/oboe ./lib/oboe)
include_directories (./lib/oboe/include)
